[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/FlexGridContainer.gd" type="Script" id=1]
[ext_resource path="res://Game/TooltipDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/StatusEffectsPanel/StatusEffectsPanel.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="StatusEffectsPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 11 )
rect_clip_content = true
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlexGridContainer" type="Container" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TooltipDisplay" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 30.2906
margin_top = -128.289
margin_right = 280.291
margin_bottom = -96.289
